# enn-template

./: .gitignore  README.md  pyproject.toml
enn_template/: env.py  train.py
